<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usuario1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry"
            app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_like"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/btn_like"
                />

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:src="@drawable/ic_outline_mode_comment_24"
                android:contentDescription="@string/btn_comment"
                />

            <ImageButton
                android:id="@+id/btn_compartir"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:src="@drawable/ic_outline_near_me_24"
                android:contentDescription="@string/btn_comment"
                />

            <ImageButton
                android:id="@+id/btn_guardar"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="185dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:src="@drawable/ic_outline_bookmark_border_24"
                android:contentDescription="@string/btn_comment"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/likes"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/usuario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/usuario"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/texto"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/coments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="15dp"
            android:text="@string/coments"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.cardview.widget.CardView>